Init mega2560_ustsv, morpheus_ustsv config Split config, env:xxx in pins.h

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,10 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = mega2560_ustsv, morpheus_ustsv
 include_dir  = Marlin
+workspace_dir = ${sysenv.TMP}/Marlin/.pio
+lib_dir       = ${sysenv.TMP}/Marlin/lib
 extra_configs =
     ini/avr.ini
     ini/due.ini
@@ -29,7 +31,8 @@ extra_configs =
     ini/stm32f4.ini
     ini/stm32f7.ini
     ini/teensy.ini
-
+    ini/morpheus_ustsv.ini
+    ini/mega2560_ustsv.ini
 #
 # The 'common' section applies to most Marlin builds.
 #
@@ -261,6 +264,21 @@ monitor_flags =
   --filter
     time
 
+#################################
+#                               #
+#   Unique Core Architectures   #
+#                               #
+#  Add a new "env" below if no  #
+# entry has values suitable to  #
+#   build for a given board.    #
+#                               #
+#################################
+
+#################################
+#                               #
+#       AVR Architecture        #
+#                               #
+#################################
 #
 # Just print the dependency tree
 #
